# engineering-log

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  cp  show
.ai/: harness-health-report.md
.ai/2026-03-09-001_service-bus-alert-review/: 01-task-requirements-initial.md  config-map.txt  docs-map.txt
.ai/2026-03-09-001_service-bus-alert-runbook/: ai-map.txt  codebase-map.txt
.ai/2026-03-09-002_diagnose-rust-cli/: 01-task-requirements-final.md  docs-map.txt
.ai/harness/: AGENTS.md  ddd-project.md  ddd-ubiquitous-language.md
.ai/memory/: lessons-learned.json
.ai/runtime/: current-task.json
.claude/: settings.json
.cursor/rules/: cursor-create-new-rules.mdc  domain-on-call-incident-workflow.mdc  governance-actionable-artifact-gate.mdc  governance-anchor-context-startup.mdc  governance-anti-slop-gate.mdc  governance-ddd-freshness.mdc  governance-llm-wiki-protocol.mdc  governance-memory-freshness.mdc  governance-root-files-freshness.mdc  markdown-code-block-language.mdc  markdown-conventions.mdc  markdown-cross-references.mdc  markdown-directory-naming.mdc  markdown-docs-naming-convention.mdc  markdown-file-naming.mdc  markdown-formatting.mdc  markdown-general-naming-convention.mdc  markdown-spacing.mdc  (+5 more)
.github/: CONTRIBUTING.md  auto-comment.yml  config.yml  labeler.yml  settings.yml
2026-06-22-001/: manifest.json
log/employer/eneco/00_incident_sre/01_alert_service_bus_topic_size_warning/runbook/: Cargo.toml  Makefile  README.md
log/employer/eneco/00_incident_sre/01_alert_service_bus_topic_size_warning/runbook/src/: main.rs
(+1270 files in other folders)
