[package]
name = "diagnose"
version = "0.1.0"
edition = "2021"
description = "SRE triage tool for Service Bus Topic Size Warning alert"

[[bin]]
name = "diagnose"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive", "env"] }
serde_json = "1"
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
